--- a/Proyecto 3/Hospital/src/main/webapp/html/general-footer.html
+++ b/Proyecto 3/Hospital/src/main/webapp/html/general-footer.html
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<footer class="page-footer fixed-bottom">
+    <div>
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item btn-floating mx-1">
+                <a href="#">
+                    <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-128.png">
+                </a>
+            </li>
+            <li class="list-inline-item btn-floating mx-1">
+                <a href="#">
+                    <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-128.png">
+                </a>
+            </li>
+            <li class="list-inline-item btn-floating mx-1 ">
+                <a href="#">
+                    <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/instagram_online_social_media_photo-128.png">
+                </a>
+            </li>
+            <li class="list-inline-item btn-floating mx-1">
+                <a href="#">
+                    <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_google_plus-128.png">
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="copyright">
+        <p> Copyright GT hospital &copy; 2019, All rights reserved. </p>
+    </div>
+</footer>
