--- a/Proyecto 3/Hospital/src/main/webapp/html/general-footer.html
+++ b/Proyecto 3/Hospital/src/main/webapp/html/general-footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer fixed-bottom">
+<footer class="page-footer">
     <div>
         <ul class="list-unstyled list-inline text-center">
             <li class="list-inline-item btn-floating mx-1">
