--- a/Proyecto 3/Hospital/src/main/webapp/html/human-resources-header.html
+++ b/Proyecto 3/Hospital/src/main/webapp/html/human-resources-header.html
@@ -1,18 +1,23 @@
 <nav id="navbar" class="navbar navbar-light" style="background-color: #7FA9C1">
-    <a class="navbar-brand" href="index.jsp">
-        <img src="img/hospital.png" style=" width: 10%" alt="General Hospital">
+    <a class="navbar-brand" href="/Hospital/jsp/EmployeeUserAreaController?action=3">
+        <img src="../img/hospital.png" style=" width: 10%" alt="General Hospital">
         GT Hospital
     </a>
     <div class="dropdown">
         <button class="btn btn-outline-light" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        User
+        Human Resources
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <a class="dropdown-item" href="employee-hiring.jsp">Register hired employee</a>
-            <a class="dropdown-item" href="#">Create user</a>
-            <a class="dropdown-item" href="#">Register quitting</a>
-            <a class="dropdown-item" href="#">Register vacations</a>
-            <a class="dropdown-item" id="SignOut" href="#">Create area</a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
+            <a class="dropdown-item" href="/Hospital/jsp/employee-hiring.jsp">Hiring Registration</a>
+            <a class="dropdown-item" href="/Hospital/jsp/quit-fired-registration.jsp">Quit/Dismiss Registration</a>
+            <a class="dropdown-item" href="/Hospital/jsp/pay-rise-registration.jsp">Pay rise registration</a>
+            <a class="dropdown-item" href="#">Payment Registration</a>
+            <a class="dropdown-item" href="#">Vacation Registration</a>
+            <a class="dropdown-item" href="/Hospital/jsp/RoomController?action=1">Room Registration</a>
+            <a class="dropdown-item" href="/Hospital/jsp/SpecialistController?action=1">Specialist Registration</a>
+            <a class="dropdown-item" href="#">Room Registration</a>
+
+            <a class="dropdown-item" href="/Hospital/jsp/area-registration.jsp">Area Registration</a>
         </div>
     </div> 
 </nav>
